# wrale_mcp-server-yahoo-finance

./: pyproject.toml
src/mcp_server_yahoo_finance/: server.py
