[project]
name = "mcp-server-yahoo-finance"
version = "0.1.0"
description = "MCP Server for Yahoo Finance"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [ "mcp>=1.1.2",]
[[project.authors]]
name = "Joshua M. Dotson"
email = "contact@jmdots.com"

[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[project.scripts]
mcp-server-yahoo-finance = "mcp_server_yahoo_finance:main"
